k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: demo
  labels:
    app: myapp

spec:
  replicas: 2

  selector:
    matchLabels:
      app: myapp

  template:
    metadata:
      labels:
        app: myapp

    spec:
      containers:
      - name: myapp
        image: demodotnet.azurecr.io/myapp:41

        ports:
        - containerPort: 8080

        command: ["/bin/sh"]
        args:
          - -c
          - |
            echo "Reading secret from Key Vault..."
            API_KEY=$(cat /mnt/secrets/ExternalApiKey)

            echo "Replacing placeholder..."
            sed -i "s|__API_KEY__|$API_KEY|g" /app/appsettings.json

            echo "Starting app..."
            dotnet MyApp.dll

        volumeMounts:
        - name: secrets-store
          mountPath: "/mnt/secrets"
          readOnly: true

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"

      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: kv-secrets
