k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: demo

spec:
  selector:
    app: myapp

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: ClusterIP
